--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -11,7 +11,7 @@
 
 <body>
 </body>
-<script type="module" src="/src/main.jsx"></script>
+<script type="module" src="../src/main.jsx"></script>
 
 </html>
 
