further navbar work, Basic simple-fetch added

--- a/index.html
+++ b/index.html
@@ -9,34 +9,14 @@
   <title>Home</title>
 </head>
 
-<!-- <body>
-  <h1 class="header">Home Page</h1>
-
-  <div class="row">
-    <div class="col-xs-2">
-      <a href="./todo-app/"><button class="btn btn-block">To Do App</button></a>
-    </div>
-    <div class="col-xs-2">
-      <button class="btn btn-block">TBD Link</button>
-    </div>
-    <div class="col-xs-2">
-      <button class="btn btn-block">TBD Link</button>
-    </div>
-  </div>
-
-</body> -->
-
 <body>
   <!-- Bootstrap Navbar -->
   <nav class="navbar navbar-default">
     <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="index.html">My Portfolio</a>
-      </div>
       <ul class="nav navbar-nav">
         <li class="active"><a href="index.html">Home</a></li>
         <li><a href="./todo-app/">To Do App</a></li>
-        <li><a href="simple-fetch.html">Simple Fetch Demo</a></li>
+        <li><a href="./simple-fetch/">Simple Fetch Demo</a></li>
       </ul>
     </div>
   </nav>
