tweaked grid size. added info for user.

--- a/pixel-art/index.html
+++ b/pixel-art/index.html
@@ -26,6 +26,7 @@
 
   <div class="container">
     <h1 class="header">Pixel-art Maker</h1>
+    <p>Choose a color and click on a pixel to draw.<br> Save Grid saves the current drawing to local storage. Load Grid will load it from local storage.</p>
     <input type="color" id="colorPicker" value="#000000">
     <button id="saveButton">Save Grid</button>
     <button id="loadButton">Load Grid</button>
