Undo/Redo & eraser tool

--- a/pixel-art/index.html
+++ b/pixel-art/index.html
@@ -30,6 +30,9 @@
     <input type="color" id="colorPicker" value="#000000">
     <button id="saveButton">Save Grid</button>
     <button id="loadButton">Load Grid</button>
+    <button id="undoButton">Undo</button>
+    <button id="redoButton">Redo</button>
+    <button id="eraser">Eraser Toggle</button>
     <!-- area for the alerts WIP <p id="message" class="message"></p> -->
     <div id="pixelGrid"></div>
   </div> 
