added 3x3 brush size

--- a/pixel-art/index.html
+++ b/pixel-art/index.html
@@ -33,6 +33,10 @@
     <button id="undoButton">Undo</button>
     <button id="redoButton">Redo</button>
     <button id="eraser">Eraser Toggle</button>
+    <div class="brushsize">
+      <button id="brush1x1" class="active">1x1 Brushsize</button>
+      <button id="brush3x3">3x3 Brushsize</button>
+    </div>    
     <!-- area for the alerts WIP <p id="message" class="message"></p> -->
     <div id="pixelGrid"></div>
   </div> 
